# SafeFL

./: .gitignore  Readme.md  main.py  main_hfl.py  main_vanilla.py  main_vanilla_fltrust.py  main_vanilla_krum.py  pyproject.toml  requirements.txt  wandb_helper.py
.claude/: settings.local.json
algorithms/: __init__.py  alignins.py  deepsight.py  fedavg.py  flame.py  fltrust.py  foolsgold.py  freqfed.py  lockdown.py  mars.py  mars_normal.py  multi_krum.py  rflbat.py
configs/: README.md  cifar10_badnets.yaml  cifar10_badnets_krum.yaml  cifar10_fedavg.yaml  config.yaml  fedavg.yaml
configs/HFL/: FedRolex.yaml  alignins_fedrolex.yaml  deepsight_fedrolex.yaml  flame_fedrolex.yaml  fltrust_fedrolex.yaml  foolsgold_fedrolex.yaml  freqfed_fedrolex.yaml  mars_fedrolex.yaml  multi_krum_fedrolex.yaml  rflbat_fedrolex.yaml
configs/algorithm/: alignins.yaml  deepsight.yaml  fedavg.yaml  flame.yaml  fltrust.yaml  foolsgold.yaml  freqfed.yaml  lockdown.yaml  mars_normal.yaml  multi_krum.yaml
configs/attack/: badnets.yaml  none.yaml
configs/dataset/: cifar10.yaml  cifar100.yaml  tiny_imagenet.yaml
configs/experiment/: vanilla_alignins_badnets.yaml  vanilla_deepsight_badnets.yaml  vanilla_fedavg_badnets.yaml  vanilla_flame_badnets.yaml  vanilla_fltrust_badnets.yaml  vanilla_foolsgold_badnets.yaml  vanilla_freqfed_badnets.yaml  (+3 more)
core/: bootstrap.py  runner.py
data/: __init__.py  constants.py  dataset_store.py  main.py  partitioner.py  registry.py  task.py  task_generator.py
models/: __init__.py  hetero_resnet.py  resnet.py
origion/: main.py  runner.py
(+141 files in other folders)
